# multiview

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  Cargo.toml  FEATURES.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  WHY.md  cliff.toml  clippy.toml  deny.toml  lefthook.yml  release-plz.toml  renovate.json  rust-toolchain.toml
crates/mosaic-audio/: Cargo.toml
crates/mosaic-audio/src/: ballistics.rs  decode.rs  error.rs  format.rs  lib.rs  meterdata.rs  probe.rs
crates/mosaic-audio/tests/: ballistics.rs  chanmap.rs  correlation.rs  decode_meter.rs  loudness.rs  mixer.rs  probe.rs  proptest_loudness.rs
crates/mosaic-cli/: Cargo.toml
crates/mosaic-cli/src/: captions.rs  cli.rs  lib.rs  main.rs  overlays.rs  pipeline.rs  run.rs  validate.rs  wallclock.rs
crates/mosaic-cli/tests/: args.rs  caption_ingest.rs  dvbsub_ingest.rs  headless_run.rs  overlay_pipeline.rs  real_pipeline.rs  streaming_encode.rs  streaming_ingest.rs  subtitle_meter_pipeline.rs  validate.rs
crates/mosaic-compositor/: CLAUDE.md  Cargo.toml
crates/mosaic-compositor/benches/: composite_realtime.rs  overlay_efficiency.rs
crates/mosaic-compositor/src/: error.rs  lib.rs  matrix.rs  pipeline.rs  primaries.rs  range.rs  transfer.rs  transfer_lut.rs
crates/mosaic-compositor/tests/: blend.rs  composite_band_accumulator.rs  composite_tile_driven.rs  gpu_compositor.rs  gpu_shader_validate.rs  lut_vs_reference.rs  matrix.rs  overlay_bake_region.rs  overlay_clockface.rs  overlay_gpu_subpass.rs  overlay_meters.rs  overlay_subpass.rs  overlay_text.rs  parallel_bands.rs  pipeline.rs  primaries.rs  proptest_color.rs  range.rs  transfer.rs
crates/mosaic-config/: Cargo.toml
crates/mosaic-config/src/: error.rs  grid.rs  lib.rs  probe.rs  salvo.rs  schema.rs  tally.rs  wall.rs
crates/mosaic-config/tests/: broadcast.rs  caption_selector.rs  examples.rs  grid_solver.rs  roundtrip.rs  validation.rs
crates/mosaic-engine/: CLAUDE.md  Cargo.toml
crates/mosaic-engine/src/: clock.rs  cycle.rs  degrade.rs  drive.rs  error.rs  heads.rs  isolation.rs  lib.rs  ptp.rs  runtime.rs  salvo.rs  scheduler.rs
crates/mosaic-engine/tests/: alarm_penalty_box.rs  alarm_rollup.rs  alarm_state.rs  clock.rs  cycle.rs  degrade.rs  drive.rs  ha_failover.rs  ha_heartbeat.rs  ha_replication.rs  heads.rs  isolation.rs  probes.rs  ptp_servo.rs  runtime.rs  salvo.rs  scheduler.rs  supervisor.rs  tally_arbiter.rs
crates/mosaic-ffmpeg/: Cargo.toml
crates/mosaic-ffmpeg/src/: audio_file.rs  avio_fetch.rs  caption.rs  caption_decode.rs  codec.rs  convert.rs  decode.rs  decode_stream.rs  demux.rs  encode.rs  error.rs  hwframe.rs  jpegxs.rs  lib.rs  mux.rs  packet.rs  scale.rs  test_fixtures.rs
crates/mosaic-ffmpeg/tests/: codec_select.rs  decode_first_frame.rs  demux.rs  demux_subtitle.rs  encode.rs  hwframe.rs  jpegxs.rs  roundtrip.rs  scale_resample.rs  shared_packet.rs
crates/mosaic-hal/: Cargo.toml
crates/mosaic-hal/src/: capability.rs  cost.rs  error.rs  lib.rs  load.rs  planner.rs  probe.rs  registry.rs  select.rs
crates/mosaic-hal/tests/: admission.rs  degradation.rs  hardware_probe.rs  probe.rs  properties.rs  registry.rs
crates/mosaic-input/: CLAUDE.md  Cargo.toml
crates/mosaic-input/src/: caption_store.rs  error.rs  hls.rs  jitter.rs  lib.rs  libav.rs  normalize.rs  pacer.rs  source.rs  srt.rs  st2022_7.rs
crates/mosaic-input/tests/: dash_mpd.rs  ingest_core.rs  ingest_ffmpeg.rs  jitter.rs  m4_properties.rs  mpegts_psi.rs  normalize.rs  pacer.rs  properties.rs  reconnect.rs  scte_cue.rs  srt_config.rs  st2022_7_reconstruct.rs  st2110_depacketize.rs  st2110_properties.rs  tsl_decode.rs  tsl_properties.rs  webrtc_sdp.rs
crates/mosaic-output/: CLAUDE.md  Cargo.toml
crates/mosaic-output/src/: error.rs  fanout.rs  lib.rs  sink.rs
crates/mosaic-output/tests/: encode_segment.rs  fanout.rs  finalize_on_error.rs  master_playlist.rs  media_playlist.rs  packet_mux.rs  push_and_gpl.rs  sliding_window_props.rs  tsl_encode.rs  tsl_roundtrip.rs
crates/mosaic-preview/: Cargo.toml
crates/mosaic-preview/src/: error.rs  framing.rs  lib.rs  tap.rs  whep.rs
crates/mosaic-preview/tests/: encode.rs  framing.rs  registry.rs  token.rs  whep.rs
crates/multiview-audio/: Cargo.toml
crates/multiview-audio/src/: adaptive.rs  ballistics.rs  cadence.rs  capability.rs  chanmap.rs  correlation.rs  decode.rs  error.rs  filter.rs  format.rs  lib.rs  loopdeck.rs  loudness.rs  loudnorm.rs  meterdata.rs  mixer.rs  probe.rs  program.rs  store.rs  tone.rs  truepeak.rs
crates/multiview-audio/tests/: adaptive_resample.rs  ballistics.rs  cadence.rs  capability.rs  chanmap.rs  correlation.rs  crossfade.rs  decode_meter.rs  decode_thread.rs  lip_sync_breakaway.rs  loopdeck.proptest-regressions  loopdeck.rs  loudness.rs  loudnorm.rs  mixer.rs  probe.rs  program_bus.rs  proptest_loudness.rs  store.rs  store_alloc.rs
crates/multiview-cli/: Cargo.toml
crates/multiview-cli/src/: audio.rs  boot.rs  capability_warn.rs  captions.rs  cli.rs  control.rs  (+29 more)
crates/multiview-config/: Cargo.toml
crates/multiview-control/: CLAUDE.md  Cargo.toml
crates/multiview-core/: CLAUDE.md  Cargo.toml
crates/multiview-engine/: CLAUDE.md  Cargo.toml
crates/multiview-events/: Cargo.toml
crates/multiview-ffmpeg/: Cargo.toml  build.rs
crates/multiview-framestore/: Cargo.toml
crates/multiview-hal/: Cargo.toml
crates/multiview-input/: CLAUDE.md  Cargo.toml
crates/multiview-licence/: CLAUDE.md  Cargo.toml
crates/multiview-mesh/: CLAUDE.md  Cargo.toml
crates/multiview-ndi-sys/: Cargo.toml  build.rs
crates/multiview-ntpsys/: Cargo.toml
crates/multiview-output/: CLAUDE.md  Cargo.toml
crates/multiview-overlay/: Cargo.toml
crates/multiview-preview/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  release_features.rs  soak.rs
xtask/tests/: iptv_logic.rs  iptv_runner.rs  release_features_drift.rs  release_features_guard.rs
(+1962 files in other folders)
