[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aperim/mosaic"
authors = ["The Mosaic Authors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Internal crates
mosaic-core = { path = "crates/mosaic-core" }
mosaic-hal = { path = "crates/mosaic-hal" }
mosaic-ffmpeg = { path = "crates/mosaic-ffmpeg" }
mosaic-compositor = { path = "crates/mosaic-compositor" }
mosaic-framestore = { path = "crates/mosaic-framestore" }
mosaic-audio = { path = "crates/mosaic-audio" }
mosaic-overlay = { path = "crates/mosaic-overlay" }
mosaic-input = { path = "crates/mosaic-input" }
mosaic-output = { path = "crates/mosaic-output" }
mosaic-engine = { path = "crates/mosaic-engine" }
mosaic-config = { path = "crates/mosaic-config" }
mosaic-events = { path = "crates/mosaic-events" }
mosaic-control = { path = "crates/mosaic-control" }
mosaic-preview = { path = "crates/mosaic-preview" }
mosaic-telemetry = { path = "crates/mosaic-telemetry" }
mosaic-cli = { path = "crates/mosaic-cli" }

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"          # FFI crates override locally to "deny" + // SAFETY:
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Groups MUST carry priority < 0 so individual overrides below are not clobbered
# (cargo emits lints alphabetically on the rustc command line).
all      = { level = "deny",  priority = -2 }
pedantic = { level = "warn",  priority = -1 }

# No panics / panicking accessors in non-test code.
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
todo             = "deny"
unimplemented    = "deny"
unreachable      = "deny"
get_unwrap       = "deny"
indexing_slicing = "deny"
# No untyped/lossy conversions — use TryFrom / TryInto / From.
as_conversions   = "deny"
# No process exit, leaks, stray debug / stdio (use `tracing`).
exit             = "deny"
mem_forget       = "deny"
dbg_macro        = "deny"
print_stdout     = "deny"
print_stderr     = "deny"
str_to_string    = "deny"
# Force documenting failure modes.
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
