[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aperim/multiview"
authors = ["The Multiview Authors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Internal crates
multiview-core = { path = "crates/multiview-core" }
multiview-hal = { path = "crates/multiview-hal" }
multiview-ffmpeg = { path = "crates/multiview-ffmpeg" }
multiview-compositor = { path = "crates/multiview-compositor" }
multiview-framestore = { path = "crates/multiview-framestore" }
multiview-audio = { path = "crates/multiview-audio" }
multiview-overlay = { path = "crates/multiview-overlay" }
multiview-input = { path = "crates/multiview-input" }
multiview-output = { path = "crates/multiview-output" }
multiview-engine = { path = "crates/multiview-engine" }
multiview-config = { path = "crates/multiview-config" }
multiview-events = { path = "crates/multiview-events" }
multiview-control = { path = "crates/multiview-control" }
multiview-preview = { path = "crates/multiview-preview" }
multiview-telemetry = { path = "crates/multiview-telemetry" }
multiview-ntpsys = { path = "crates/multiview-ntpsys" }
multiview-cli = { path = "crates/multiview-cli" }

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"          # FFI crates override locally to "deny" + // SAFETY:
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Groups MUST carry priority < 0 so individual overrides below are not clobbered
# (cargo emits lints alphabetically on the rustc command line).
all      = { level = "deny",  priority = -2 }
pedantic = { level = "warn",  priority = -1 }

# No panics / panicking accessors in non-test code.
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
todo             = "deny"
unimplemented    = "deny"
unreachable      = "deny"
get_unwrap       = "deny"
indexing_slicing = "deny"
# No untyped/lossy conversions — use TryFrom / TryInto / From.
as_conversions   = "deny"
# No process exit, leaks, stray debug / stdio (use `tracing`).
exit             = "deny"
mem_forget       = "deny"
dbg_macro        = "deny"
print_stdout     = "deny"
print_stderr     = "deny"
str_to_string    = "deny"
# Force documenting failure modes.
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
