[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# gen-openapi serializes multiview-control's utoipa OpenApi document. The `openapi`
# feature (default-on in multiview-control) is what brings in utoipa + the ApiDoc.
multiview-control = { workspace = true, features = ["openapi"] }
utoipa = { version = "5.5.0" }
serde_json = { workspace = true }

[lints]
workspace = true
