[package]
name = "mosaic-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mosaic-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
"default" = []
"ffmpeg" = []
