[package]
name = "mosaic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
mosaic-core = { workspace = true }
mosaic-engine = { workspace = true }
mosaic-control = { workspace = true }
mosaic-config = { workspace = true }
mosaic-telemetry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["software"]
software = []
nvidia = []
apple = []
linux-vaapi = []
full = []
