[package]
name = "mosaic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[lib]
name = "mosaic_cli"
path = "src/lib.rs"

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
mosaic-core = { workspace = true }
mosaic-engine = { workspace = true }
mosaic-control = { workspace = true }
mosaic-config = { workspace = true }
mosaic-telemetry = { workspace = true }
mosaic-compositor = { workspace = true }
mosaic-framestore = { workspace = true }
mosaic-hal = { workspace = true }
mosaic-ffmpeg = { workspace = true }
mosaic-input = { workspace = true }
mosaic-output = { workspace = true }
mosaic-audio = { workspace = true }
mosaic-overlay = { workspace = true }
mosaic-preview = { workspace = true }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Opt-in alongside the `ffmpeg` feature, used ONLY to name `ffmpeg-next`'s safe
# value types (`format::Pixel`, the `Video` host-frame type) when bridging
# `mosaic-compositor`'s `Nv12Image` canvas into the `mosaic-output` sinks and
# feeding `mosaic-ffmpeg`'s safe decoder. This crate writes NO `unsafe` and
# performs NO FFI (it stays `unsafe_code = forbid`); all raw libav* remains owned
# by `mosaic-ffmpeg`. Pinned to match its binding. `cargo deny` runs with
# all-features=false so it never sees this opt-in dependency.
ffmpeg-next = { version = "7.1", optional = true }

# Used by the real `ffmpeg`-feature pipeline to stage a generated `test`-source
# clip into a tempdir before decoding it. Optional + gated by the `ffmpeg`
# feature so the default pure-Rust build never pulls it. `cargo deny` runs with
# all-features=false so it never sees this opt-in dependency.
tempfile = { version = "3", optional = true }

# Used ONLY by the `overlay`-feature pipeline to read kind-specific overlay
# params (e.g. an analog `[[overlays]]` clock's placement) out of
# `mosaic_config::Overlay::params` (a `serde_json::Map`). Optional + gated by the
# `overlay` feature so the default build never pulls it. `cargo deny` runs with
# all-features=false so it never sees this opt-in dependency.
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

# The real-pipeline integration test needs the `ffmpeg` feature (a real libav*
# build + the `ffmpeg`/`ffprobe` CLIs at runtime).
[[test]]
name = "real_pipeline"
required-features = ["ffmpeg"]

# The streaming-encode behavioural tests (ADR-0025) drive the bounded
# bake→encode→fan-out path with injected fake sinks; they need the `ffmpeg`
# feature (the streaming machinery lives in the `pipeline` module) but no
# `ffprobe`/codec at runtime.
[[test]]
name = "streaming_encode"
required-features = ["ffmpeg"]

# The overlay-baking end-to-end test needs both `ffmpeg` and `overlay`.
[[test]]
name = "overlay_pipeline"
required-features = ["ffmpeg", "overlay"]

# The subtitle-burn-in + real-audio-meter test needs both `ffmpeg` and `overlay`.
[[test]]
name = "subtitle_meter_pipeline"
required-features = ["ffmpeg", "overlay"]

# The live HLS WebVTT caption-ingest proof needs both `ffmpeg` and `overlay`. Its
# only test is `#[ignore]`d (it hits the network); run with `-- --ignored`.
[[test]]
name = "caption_ingest"
required-features = ["ffmpeg", "overlay"]

# The native DVB-sub (bitmap) caption ingest + burn-in end-to-end proof needs
# both `ffmpeg` and `overlay`; the libav fixture generator comes from the
# `mosaic-ffmpeg/test-fixtures` dev-dependency feature.
[[test]]
name = "dvbsub_ingest"
required-features = ["ffmpeg", "overlay"]

# Feature presets for the `mosaic` binary. The DEFAULT build is `software`:
# pure Rust, no native libs, no GPU — the CI-green baseline. The hardware
# presets aggregate the owning sub-crates' feature flags exactly as documented
# in docs/architecture/conventions.md §4. They are NOT built in CI (they need
# the vendor toolchains/SDKs installed); they exist so a release build can opt
# in with one flag.
[features]
default = ["software"]

# Software-only reference path (always available).
software = []

# Overlay rasterization: bakes the configured overlays (clock/labels, dB
# meters, safe-area graticules, tally borders, burned-in SRT/VTT subtitles) into
# the composited program before encode, via mosaic-compositor's pure-Rust
# overlay sub-pass (cosmic-text + swash + bundled OFL fonts). OFF by default so
# the baseline build stays minimal; GPU-free and LGPL-clean. Combine with
# `ffmpeg` (`run --features ffmpeg,overlay`) to overlay the real pipeline's
# output; it works alone with the headless software run too.
overlay = ["mosaic-compositor/overlay", "dep:serde_json"]

# Real libav* end-to-end pipeline: ingest (demux/decode) -> per-tile framestores
# -> EngineRuntime drive (CPU reference compositor) -> encode the canvas once
# (LGPL `mpeg2video` by default) -> fan out to the file + HLS output sinks. Wires
# the owning sub-crates' `ffmpeg` features and pulls `ffmpeg-next` only to name
# its SAFE value types (no FFI in this crate). LGPL-clean: never escalates to GPL.
ffmpeg = [
    "dep:ffmpeg-next",
    "dep:tempfile",
    # `test-fixtures` (⊇ `mosaic-ffmpeg/ffmpeg`) exposes the libav-built `dvbsub`
    # MPEG-TS fixture generator the DVB-sub end-to-end test needs (the FFmpeg CLI
    # cannot transcode text → bitmap subtitle). It is forwarded via the `ffmpeg`
    # feature — not as a hard dev-dependency — so `ffmpeg-next` (WTFPL) stays
    # behind the off-by-default `ffmpeg` feature and never enters the default
    # `cargo deny check --all-features=false` graph. The `#[doc(hidden)]` module
    # is test-only and adds no product surface.
    "mosaic-ffmpeg/test-fixtures",
    "mosaic-input/ffmpeg",
    "mosaic-output/ffmpeg",
    "mosaic-audio/ffmpeg",
]

# License-escalating: forwards the GPL software encoders (libx264/libx265) so a
# `run --features ffmpeg,gpl-codecs` may target H.264/H.265. Enabling this makes
# the whole build GPL; it is NEVER pulled in by `ffmpeg` alone and never enters
# the default (LGPL-clean) build. Implies `ffmpeg` (the real encode path).
gpl-codecs = [
    "ffmpeg",
    "mosaic-ffmpeg/gpl-codecs",
    "mosaic-output/gpl-codecs",
]

# NVIDIA: CUDA decode/encode + CUDA compositor fast path + FFmpeg demux/mux,
# wgpu baseline compositor. (cuda + ffmpeg + wgpu.)
nvidia = [
    "mosaic-hal/cuda",
    "mosaic-compositor/cuda",
    "mosaic-compositor/wgpu",
    "mosaic-ffmpeg/ffmpeg",
    "mosaic-input/ffmpeg",
    "mosaic-output/ffmpeg",
    "mosaic-audio/ffmpeg",
]

# Apple Silicon / Intel macOS: VideoToolbox codecs + Metal compositor + FFmpeg.
# (videotoolbox + metal + ffmpeg.)
apple = [
    "mosaic-hal/videotoolbox",
    "mosaic-compositor/metal",
    "mosaic-ffmpeg/ffmpeg",
    "mosaic-input/ffmpeg",
    "mosaic-output/ffmpeg",
    "mosaic-audio/ffmpeg",
]

# Linux VAAPI/QSV: VAAPI + QuickSync codecs + wgpu compositor + FFmpeg.
# (vaapi + qsv + ffmpeg + wgpu.)
linux-vaapi = [
    "mosaic-hal/vaapi",
    "mosaic-hal/qsv",
    "mosaic-compositor/vaapi",
    "mosaic-compositor/wgpu",
    "mosaic-ffmpeg/ffmpeg",
    "mosaic-input/ffmpeg",
    "mosaic-output/ffmpeg",
    "mosaic-audio/ffmpeg",
]

# Everything non-GPL: all codec backends, every compositor backend, FFmpeg,
# libass overlays, the embedded SPA, OpenAPI docs, WebRTC preview, and NDI I/O.
# Deliberately excludes `gpl-codecs` (which would relicense the whole build GPL).
full = [
    "nvidia",
    "linux-vaapi",
    "mosaic-hal/videotoolbox",
    "mosaic-compositor/metal",
    "mosaic-overlay/libass",
    "mosaic-input/ndi",
    "mosaic-output/ndi",
    "mosaic-control/embed-web",
    "mosaic-control/openapi",
    "mosaic-preview/webrtc",
]

[lints]
workspace = true
