[package]
name = "mosaic-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
arc-swap = "1.9.1"
mosaic-core = { workspace = true }
mosaic-hal = { workspace = true }
mosaic-framestore = { workspace = true }
mosaic-input = { workspace = true }
mosaic-output = { workspace = true }
mosaic-compositor = { workspace = true }
mosaic-audio = { workspace = true }
mosaic-overlay = { workspace = true }
mosaic-config = { workspace = true }
mosaic-events = { workspace = true }
mosaic-telemetry = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "test-util"] }

[features]
"default" = []
# PTP / ST 2059-2 hardware binding (PTP NIC + PHC discipline). OFF by default:
# it needs a real PTP-capable NIC, so it is compile-verified only here. The PURE
# servo math (`ptp::PtpServo`) is always compiled and fully tested; this feature
# only adds the thin `ptp::phc` disciplined-reference wrapper. The output clock
# (`out_pts = f(tick)`) is never paced by PTP — see the `ptp` module docs.
"ptp" = []
# M9 high-availability cluster transport (peer heartbeat sockets + state
# replication wire I/O). OFF by default: it needs a real network and a live
# multi-node cluster, so it is compile-verified only here. The PURE HA model —
# the heartbeat/failover state machine (`ha::HaStateMachine`, `ha::Cluster`) and
# the replication model (`ha::repl`) — is always compiled and fully tested; this
# feature only adds the thin `ha::transport` wire wrapper around them. HA never
# paces or back-pressures the active node's output clock — see the `ha` docs.
"cluster" = []

[lints]
workspace = true
