[package]
name = "mosaic-ffmpeg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
mosaic-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# libav* binding — opt-in only behind the `ffmpeg` feature so the DEFAULT build
# stays pure-Rust / native-dep-free. `ffmpeg-next` (+ its `ffmpeg-sys-next` build
# crate) links the SYSTEM libav* via pkg-config and auto-detects the installed
# FFmpeg version in build.rs (no per-version Cargo feature needed). Pinned to the
# 7.x line to match the FFmpeg 7.1 / libavcodec 61 in the dev/CI image. WTFPL
# (public-domain-equivalent, permissive) — acceptable for an opt-in feature; the
# default `cargo deny check` runs with all-features=false so it never sees this.
ffmpeg-next = { version = "7.1", optional = true }

[features]
"default" = []
"ffmpeg" = ["dep:ffmpeg-next"]
"gpl-codecs" = []

[dev-dependencies]
tempfile = "3"

# FFI crate exception. The workspace forbids `unsafe_code`, and a `forbid` level
# can never be relaxed by a downstream manifest or inner attribute — so this crate
# cannot use `[lints] workspace = true` (cargo also rejects inheriting + overriding
# in one table). Instead it restates the workspace lint set verbatim with the single
# change of `unsafe_code` from `forbid` to `deny`, so raw libav* bindings are allowed
# only with a justified `// SAFETY:` comment per block. Keep in sync with the root
# Cargo.toml `[workspace.lints]`.
[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all      = { level = "deny",  priority = -2 }
pedantic = { level = "warn",  priority = -1 }
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
todo             = "deny"
unimplemented    = "deny"
unreachable      = "deny"
get_unwrap       = "deny"
indexing_slicing = "deny"
as_conversions   = "deny"
exit             = "deny"
mem_forget       = "deny"
dbg_macro        = "deny"
print_stdout     = "deny"
print_stderr     = "deny"
str_to_string    = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
